--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@ body {
 }
 
 .container {
+  position: relative;
   max-width: 800px;
   margin: 0 auto;
   background: #fff;
@@ -36,6 +37,7 @@ label {
 }
 
 input[type="text"],
+input[type="password"],
 textarea {
   display: block;
   /* width: 100%; */
@@ -49,11 +51,11 @@ textarea {
   resize: vertical;
 }
 
-button {
+.button {
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #fc0;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -62,7 +64,20 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #fa0;
+}
+
+.logout-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 10px;
+  background-color: grey;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 .output-section {
@@ -73,6 +88,9 @@ table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 10px;
+  height: 500px;
+  overflow-y: scroll;
+  overflow-x: auto;
 }
 
 th, td {
